--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -59,3 +59,8 @@
               display: none 
           &.show 
             display: block 
+@media screen and ( max-width: 700px )
+  .section2
+    & .section2-wrap 
+      & .block 
+        width: 100%
