--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,6 @@
 @import 'interface'
 @import 'blocks/header'
+@import 'blocks/section1'
+@import 'blocks/section2'
+@import 'blocks/newsletter'
 @import 'blocks/adaptive'
