--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,4 +3,6 @@
 @import 'blocks/section1'
 @import 'blocks/section2'
 @import 'blocks/newsletter'
+@import 'blocks/section3'
+@import 'blocks/footer'
 @import 'blocks/adaptive'
