--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,137 @@ body {
   z-index: 2;
 }
 
+.section3 {
+  margin-top: 100px;
+}
+
+.section3 .section3-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.section3 .section3-wrap .block {
+  width: calc(50% - 30px);
+}
+
+.section3 .section3-wrap .block img {
+  width: 100%;
+}
+
+.section3 .section3-wrap .block .content {
+  margin-top: 30px;
+}
+
+.section3 .section3-wrap .block .content h6 {
+  text-transform: uppercase;
+  font-family: 'Ubuntu-Light';
+  color: #b4ad9e;
+}
+
+.section3 .section3-wrap .block .content h4 {
+  margin-top: 20px;
+  font-size: 30px;
+}
+
+.section3 .section3-wrap .block .content p {
+  margin-top: 30px;
+  line-height: 1.71;
+}
+
+.section3 .btn {
+  margin-top: 160px;
+  text-align: center;
+}
+
+.section3 .btn button {
+  border: 1px solid #626262;
+  font-size: 20px;
+  width: 165px;
+  height: 60px;
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.section3 .btn button:hover {
+  background: #626262;
+  color: #111111;
+}
+
+.footer {
+  margin-top: 100px;
+  background: #f0f0f0;
+  padding: 40px 0;
+}
+
+.footer .footer-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer .footer-wrap .links a {
+  display: inline-block;
+  color: #000000;
+  margin-left: 15px;
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.footer .footer-wrap .links a:first-of-type {
+  margin-left: 0;
+}
+
+.footer .footer-wrap .links a:hover {
+  color: #626262;
+}
+
+.footer .footer-wrap .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer .footer-wrap .social h6 {
+  font-size: 14px;
+  color: #000000;
+  margin-right: 20px;
+}
+
+.footer .footer-wrap .social a {
+  color: #626262;
+  margin-left: 15px;
+}
+
+.footer .footer-wrap .social a:first-of-type {
+  margin-left: 0;
+}
+
+.footer .footer-wrap .social a .fab {
+  font-family: 'fa-brands-400';
+  font-size: 15px;
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.footer .footer-wrap .social a .fab:hover {
+  opacity: .6;
+}
+
 @media screen and (max-width: 800px) {
   .header .nav .menu .burger {
     display: -webkit-box;
@@ -366,6 +497,28 @@ body {
 @media screen and (max-width: 700px) {
   .section2 .section2-wrap .block {
     width: 100%;
+  }
+  .section3 {
+    margin-top: 0;
+  }
+  .section3 .section3-wrap .block {
+    width: 100%;
+    margin-top: 130px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .footer .footer-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer .footer-wrap .block {
+    margin: auto;
+  }
+  .footer .footer-wrap .social {
+    margin-top: 30px;
   }
 }
 /*# sourceMappingURL=style.css.map */
