--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -64,3 +64,17 @@
     & .section2-wrap 
       & .block 
         width: 100%
+  .section3
+    margin-top: 0
+    & .section3-wrap 
+      & .block 
+        width: 100%
+        margin-top: 130px 
+@media screen and ( max-width: 400px )
+  .footer
+    & .footer-wrap 
+      flex-direction: column 
+      & .block 
+        margin: auto
+      & .social 
+        margin-top: 30px 
